--- a/model/new_dataframe.ipynb
+++ b/model/new_dataframe.ipynb
@@ -6191,7 +6191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -6204,14 +6204,6 @@
       "** Training LogLoss: 0.36953900615759205\n",
       "** Testing LogLoss: 0.41457484073679185\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/anaconda3/envs/NN/lib/python3.7/site-packages/sklearn/linear_model/logistic.py:432: FutureWarning: Default solver will be changed to 'lbfgs' in 0.22. Specify a solver to silence this warning.\n",
-      "  FutureWarning)\n"
-     ]
     }
    ],
    "source": [
@@ -6219,7 +6211,7 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import log_loss\n",
     "\n",
-    "lm = LogisticRegression(random_state = 19, max_iter=2000)\n",
+    "lm = LogisticRegression(random_state = 19, max_iter=2000, solver = 'liblinear')\n",
     "#lm.fit(X_train.values,y_train)\n",
     "lm.fit(X_train, y_train)\n",
     "print(\"** Logistic Regression model has been trained.\")\n",
