--- a/model/new_dataframe.ipynb
+++ b/model/new_dataframe.ipynb
@@ -6226,11 +6226,268 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max_features: 1, num_estimators: 10, Accuracy: 0.702 (+/- 0.033)\n",
+      "max_features: 1, num_estimators: 30, Accuracy: 0.714 (+/- 0.056)\n",
+      "max_features: 1, num_estimators: 50, Accuracy: 0.725 (+/- 0.045)\n",
+      "max_features: 1, num_estimators: 70, Accuracy: 0.729 (+/- 0.039)\n",
+      "max_features: 1, num_estimators: 90, Accuracy: 0.732 (+/- 0.036)\n",
+      "max_features: 1, num_estimators: 110, Accuracy: 0.732 (+/- 0.044)\n",
+      "max_features: 1, num_estimators: 130, Accuracy: 0.727 (+/- 0.037)\n",
+      "max_features: 1, num_estimators: 150, Accuracy: 0.727 (+/- 0.039)\n",
+      "max_features: 1, num_estimators: 170, Accuracy: 0.734 (+/- 0.047)\n",
+      "max_features: 1, num_estimators: 190, Accuracy: 0.730 (+/- 0.041)\n",
+      "max_features: 2, num_estimators: 10, Accuracy: 0.717 (+/- 0.035)\n",
+      "max_features: 2, num_estimators: 30, Accuracy: 0.724 (+/- 0.051)\n",
+      "max_features: 2, num_estimators: 50, Accuracy: 0.731 (+/- 0.048)\n",
+      "max_features: 2, num_estimators: 70, Accuracy: 0.731 (+/- 0.049)\n",
+      "max_features: 2, num_estimators: 90, Accuracy: 0.729 (+/- 0.045)\n",
+      "max_features: 2, num_estimators: 110, Accuracy: 0.736 (+/- 0.039)\n",
+      "max_features: 2, num_estimators: 130, Accuracy: 0.733 (+/- 0.041)\n",
+      "max_features: 2, num_estimators: 150, Accuracy: 0.737 (+/- 0.041)\n",
+      "max_features: 2, num_estimators: 170, Accuracy: 0.732 (+/- 0.034)\n",
+      "max_features: 2, num_estimators: 190, Accuracy: 0.735 (+/- 0.029)\n",
+      "max_features: 3, num_estimators: 10, Accuracy: 0.715 (+/- 0.043)\n",
+      "max_features: 3, num_estimators: 30, Accuracy: 0.720 (+/- 0.044)\n",
+      "max_features: 3, num_estimators: 50, Accuracy: 0.725 (+/- 0.043)\n",
+      "max_features: 3, num_estimators: 70, Accuracy: 0.730 (+/- 0.042)\n",
+      "max_features: 3, num_estimators: 90, Accuracy: 0.723 (+/- 0.037)\n",
+      "max_features: 3, num_estimators: 110, Accuracy: 0.727 (+/- 0.038)\n",
+      "max_features: 3, num_estimators: 130, Accuracy: 0.731 (+/- 0.042)\n",
+      "max_features: 3, num_estimators: 150, Accuracy: 0.730 (+/- 0.039)\n",
+      "max_features: 3, num_estimators: 170, Accuracy: 0.730 (+/- 0.045)\n",
+      "max_features: 3, num_estimators: 190, Accuracy: 0.732 (+/- 0.044)\n",
+      "max_features: 4, num_estimators: 10, Accuracy: 0.709 (+/- 0.032)\n",
+      "max_features: 4, num_estimators: 30, Accuracy: 0.729 (+/- 0.038)\n",
+      "max_features: 4, num_estimators: 50, Accuracy: 0.737 (+/- 0.040)\n",
+      "max_features: 4, num_estimators: 70, Accuracy: 0.739 (+/- 0.031)\n",
+      "max_features: 4, num_estimators: 90, Accuracy: 0.736 (+/- 0.055)\n",
+      "max_features: 4, num_estimators: 110, Accuracy: 0.735 (+/- 0.033)\n",
+      "max_features: 4, num_estimators: 130, Accuracy: 0.738 (+/- 0.041)\n",
+      "max_features: 4, num_estimators: 150, Accuracy: 0.739 (+/- 0.035)\n",
+      "max_features: 4, num_estimators: 170, Accuracy: 0.743 (+/- 0.027)\n",
+      "max_features: 4, num_estimators: 190, Accuracy: 0.740 (+/- 0.025)\n",
+      "max_features: 5, num_estimators: 10, Accuracy: 0.729 (+/- 0.038)\n",
+      "max_features: 5, num_estimators: 30, Accuracy: 0.734 (+/- 0.033)\n",
+      "max_features: 5, num_estimators: 50, Accuracy: 0.735 (+/- 0.045)\n",
+      "max_features: 5, num_estimators: 70, Accuracy: 0.736 (+/- 0.045)\n",
+      "max_features: 5, num_estimators: 90, Accuracy: 0.739 (+/- 0.021)\n",
+      "max_features: 5, num_estimators: 110, Accuracy: 0.738 (+/- 0.031)\n",
+      "max_features: 5, num_estimators: 130, Accuracy: 0.734 (+/- 0.033)\n",
+      "max_features: 5, num_estimators: 150, Accuracy: 0.738 (+/- 0.034)\n",
+      "max_features: 5, num_estimators: 170, Accuracy: 0.741 (+/- 0.034)\n",
+      "max_features: 5, num_estimators: 190, Accuracy: 0.741 (+/- 0.038)\n",
+      "max_features: 6, num_estimators: 10, Accuracy: 0.719 (+/- 0.066)\n",
+      "max_features: 6, num_estimators: 30, Accuracy: 0.734 (+/- 0.047)\n",
+      "max_features: 6, num_estimators: 50, Accuracy: 0.735 (+/- 0.037)\n",
+      "max_features: 6, num_estimators: 70, Accuracy: 0.740 (+/- 0.036)\n",
+      "max_features: 6, num_estimators: 90, Accuracy: 0.746 (+/- 0.025)\n",
+      "max_features: 6, num_estimators: 110, Accuracy: 0.739 (+/- 0.038)\n",
+      "max_features: 6, num_estimators: 130, Accuracy: 0.741 (+/- 0.040)\n",
+      "max_features: 6, num_estimators: 150, Accuracy: 0.742 (+/- 0.037)\n",
+      "max_features: 6, num_estimators: 170, Accuracy: 0.741 (+/- 0.045)\n",
+      "max_features: 6, num_estimators: 190, Accuracy: 0.741 (+/- 0.041)\n",
+      "max_features: 7, num_estimators: 10, Accuracy: 0.707 (+/- 0.040)\n",
+      "max_features: 7, num_estimators: 30, Accuracy: 0.738 (+/- 0.054)\n",
+      "max_features: 7, num_estimators: 50, Accuracy: 0.745 (+/- 0.042)\n",
+      "max_features: 7, num_estimators: 70, Accuracy: 0.742 (+/- 0.035)\n",
+      "max_features: 7, num_estimators: 90, Accuracy: 0.740 (+/- 0.030)\n",
+      "max_features: 7, num_estimators: 110, Accuracy: 0.746 (+/- 0.036)\n",
+      "max_features: 7, num_estimators: 130, Accuracy: 0.746 (+/- 0.047)\n",
+      "max_features: 7, num_estimators: 150, Accuracy: 0.741 (+/- 0.033)\n",
+      "max_features: 7, num_estimators: 170, Accuracy: 0.742 (+/- 0.033)\n",
+      "max_features: 7, num_estimators: 190, Accuracy: 0.747 (+/- 0.035)\n",
+      "max_features: 8, num_estimators: 10, Accuracy: 0.710 (+/- 0.065)\n",
+      "max_features: 8, num_estimators: 30, Accuracy: 0.731 (+/- 0.069)\n",
+      "max_features: 8, num_estimators: 50, Accuracy: 0.739 (+/- 0.049)\n",
+      "max_features: 8, num_estimators: 70, Accuracy: 0.742 (+/- 0.041)\n",
+      "max_features: 8, num_estimators: 90, Accuracy: 0.746 (+/- 0.039)\n",
+      "max_features: 8, num_estimators: 110, Accuracy: 0.746 (+/- 0.039)\n",
+      "max_features: 8, num_estimators: 130, Accuracy: 0.741 (+/- 0.039)\n",
+      "max_features: 8, num_estimators: 150, Accuracy: 0.742 (+/- 0.036)\n",
+      "max_features: 8, num_estimators: 170, Accuracy: 0.745 (+/- 0.036)\n",
+      "max_features: 8, num_estimators: 190, Accuracy: 0.744 (+/- 0.043)\n",
+      "max_features: 9, num_estimators: 10, Accuracy: 0.713 (+/- 0.069)\n",
+      "max_features: 9, num_estimators: 30, Accuracy: 0.721 (+/- 0.065)\n",
+      "max_features: 9, num_estimators: 50, Accuracy: 0.737 (+/- 0.050)\n",
+      "max_features: 9, num_estimators: 70, Accuracy: 0.742 (+/- 0.044)\n",
+      "max_features: 9, num_estimators: 90, Accuracy: 0.740 (+/- 0.047)\n",
+      "max_features: 9, num_estimators: 110, Accuracy: 0.740 (+/- 0.050)\n",
+      "max_features: 9, num_estimators: 130, Accuracy: 0.737 (+/- 0.056)\n",
+      "max_features: 9, num_estimators: 150, Accuracy: 0.738 (+/- 0.050)\n",
+      "max_features: 9, num_estimators: 170, Accuracy: 0.740 (+/- 0.048)\n",
+      "max_features: 9, num_estimators: 190, Accuracy: 0.743 (+/- 0.043)\n",
+      "max_features: 10, num_estimators: 10, Accuracy: 0.724 (+/- 0.065)\n",
+      "max_features: 10, num_estimators: 30, Accuracy: 0.734 (+/- 0.085)\n",
+      "max_features: 10, num_estimators: 50, Accuracy: 0.739 (+/- 0.058)\n",
+      "max_features: 10, num_estimators: 70, Accuracy: 0.741 (+/- 0.059)\n",
+      "max_features: 10, num_estimators: 90, Accuracy: 0.743 (+/- 0.056)\n",
+      "max_features: 10, num_estimators: 110, Accuracy: 0.739 (+/- 0.063)\n",
+      "max_features: 10, num_estimators: 130, Accuracy: 0.739 (+/- 0.055)\n",
+      "max_features: 10, num_estimators: 150, Accuracy: 0.742 (+/- 0.051)\n",
+      "max_features: 10, num_estimators: 170, Accuracy: 0.738 (+/- 0.048)\n",
+      "max_features: 10, num_estimators: 190, Accuracy: 0.741 (+/- 0.047)\n",
+      "max_features: 11, num_estimators: 10, Accuracy: 0.721 (+/- 0.064)\n",
+      "max_features: 11, num_estimators: 30, Accuracy: 0.739 (+/- 0.067)\n",
+      "max_features: 11, num_estimators: 50, Accuracy: 0.739 (+/- 0.048)\n",
+      "max_features: 11, num_estimators: 70, Accuracy: 0.739 (+/- 0.043)\n",
+      "max_features: 11, num_estimators: 90, Accuracy: 0.743 (+/- 0.047)\n",
+      "max_features: 11, num_estimators: 110, Accuracy: 0.740 (+/- 0.042)\n",
+      "max_features: 11, num_estimators: 130, Accuracy: 0.742 (+/- 0.040)\n",
+      "max_features: 11, num_estimators: 150, Accuracy: 0.745 (+/- 0.035)\n",
+      "max_features: 11, num_estimators: 170, Accuracy: 0.746 (+/- 0.041)\n",
+      "max_features: 11, num_estimators: 190, Accuracy: 0.747 (+/- 0.040)\n",
+      "max_features: 12, num_estimators: 10, Accuracy: 0.723 (+/- 0.048)\n",
+      "max_features: 12, num_estimators: 30, Accuracy: 0.728 (+/- 0.051)\n",
+      "max_features: 12, num_estimators: 50, Accuracy: 0.749 (+/- 0.053)\n",
+      "max_features: 12, num_estimators: 70, Accuracy: 0.741 (+/- 0.043)\n",
+      "max_features: 12, num_estimators: 90, Accuracy: 0.739 (+/- 0.036)\n",
+      "max_features: 12, num_estimators: 110, Accuracy: 0.739 (+/- 0.043)\n",
+      "max_features: 12, num_estimators: 130, Accuracy: 0.741 (+/- 0.041)\n",
+      "max_features: 12, num_estimators: 150, Accuracy: 0.743 (+/- 0.043)\n",
+      "max_features: 12, num_estimators: 170, Accuracy: 0.746 (+/- 0.044)\n",
+      "max_features: 12, num_estimators: 190, Accuracy: 0.745 (+/- 0.040)\n",
+      "max_features: 13, num_estimators: 10, Accuracy: 0.716 (+/- 0.059)\n",
+      "max_features: 13, num_estimators: 30, Accuracy: 0.737 (+/- 0.064)\n",
+      "max_features: 13, num_estimators: 50, Accuracy: 0.745 (+/- 0.053)\n",
+      "max_features: 13, num_estimators: 70, Accuracy: 0.745 (+/- 0.047)\n",
+      "max_features: 13, num_estimators: 90, Accuracy: 0.752 (+/- 0.044)\n",
+      "max_features: 13, num_estimators: 110, Accuracy: 0.747 (+/- 0.043)\n",
+      "max_features: 13, num_estimators: 130, Accuracy: 0.749 (+/- 0.048)\n",
+      "max_features: 13, num_estimators: 150, Accuracy: 0.749 (+/- 0.042)\n",
+      "max_features: 13, num_estimators: 170, Accuracy: 0.748 (+/- 0.042)\n",
+      "max_features: 13, num_estimators: 190, Accuracy: 0.748 (+/- 0.041)\n",
+      "max_features: 14, num_estimators: 10, Accuracy: 0.724 (+/- 0.051)\n",
+      "max_features: 14, num_estimators: 30, Accuracy: 0.737 (+/- 0.070)\n",
+      "max_features: 14, num_estimators: 50, Accuracy: 0.743 (+/- 0.050)\n",
+      "max_features: 14, num_estimators: 70, Accuracy: 0.740 (+/- 0.049)\n",
+      "max_features: 14, num_estimators: 90, Accuracy: 0.745 (+/- 0.056)\n",
+      "max_features: 14, num_estimators: 110, Accuracy: 0.745 (+/- 0.055)\n",
+      "max_features: 14, num_estimators: 130, Accuracy: 0.750 (+/- 0.044)\n",
+      "max_features: 14, num_estimators: 150, Accuracy: 0.748 (+/- 0.049)\n",
+      "max_features: 14, num_estimators: 170, Accuracy: 0.749 (+/- 0.044)\n",
+      "max_features: 14, num_estimators: 190, Accuracy: 0.750 (+/- 0.046)\n",
+      "max_features: 15, num_estimators: 10, Accuracy: 0.709 (+/- 0.059)\n",
+      "max_features: 15, num_estimators: 30, Accuracy: 0.737 (+/- 0.053)\n",
+      "max_features: 15, num_estimators: 50, Accuracy: 0.733 (+/- 0.048)\n",
+      "max_features: 15, num_estimators: 70, Accuracy: 0.736 (+/- 0.043)\n",
+      "max_features: 15, num_estimators: 90, Accuracy: 0.745 (+/- 0.037)\n",
+      "max_features: 15, num_estimators: 110, Accuracy: 0.745 (+/- 0.045)\n",
+      "max_features: 15, num_estimators: 130, Accuracy: 0.741 (+/- 0.047)\n",
+      "max_features: 15, num_estimators: 150, Accuracy: 0.743 (+/- 0.037)\n",
+      "max_features: 15, num_estimators: 170, Accuracy: 0.743 (+/- 0.036)\n",
+      "max_features: 15, num_estimators: 190, Accuracy: 0.747 (+/- 0.037)\n",
+      "max_features: 16, num_estimators: 10, Accuracy: 0.718 (+/- 0.028)\n",
+      "max_features: 16, num_estimators: 30, Accuracy: 0.733 (+/- 0.044)\n",
+      "max_features: 16, num_estimators: 50, Accuracy: 0.743 (+/- 0.037)\n",
+      "max_features: 16, num_estimators: 70, Accuracy: 0.743 (+/- 0.032)\n",
+      "max_features: 16, num_estimators: 90, Accuracy: 0.750 (+/- 0.032)\n",
+      "max_features: 16, num_estimators: 110, Accuracy: 0.743 (+/- 0.033)\n",
+      "max_features: 16, num_estimators: 130, Accuracy: 0.745 (+/- 0.030)\n",
+      "max_features: 16, num_estimators: 150, Accuracy: 0.745 (+/- 0.035)\n",
+      "max_features: 16, num_estimators: 170, Accuracy: 0.744 (+/- 0.040)\n",
+      "max_features: 16, num_estimators: 190, Accuracy: 0.744 (+/- 0.030)\n",
+      "max_features: 17, num_estimators: 10, Accuracy: 0.728 (+/- 0.072)\n",
+      "max_features: 17, num_estimators: 30, Accuracy: 0.735 (+/- 0.055)\n",
+      "max_features: 17, num_estimators: 50, Accuracy: 0.740 (+/- 0.036)\n",
+      "max_features: 17, num_estimators: 70, Accuracy: 0.749 (+/- 0.049)\n",
+      "max_features: 17, num_estimators: 90, Accuracy: 0.749 (+/- 0.054)\n",
+      "max_features: 17, num_estimators: 110, Accuracy: 0.749 (+/- 0.052)\n",
+      "max_features: 17, num_estimators: 130, Accuracy: 0.746 (+/- 0.049)\n",
+      "max_features: 17, num_estimators: 150, Accuracy: 0.745 (+/- 0.047)\n",
+      "max_features: 17, num_estimators: 170, Accuracy: 0.743 (+/- 0.043)\n",
+      "max_features: 17, num_estimators: 190, Accuracy: 0.745 (+/- 0.048)\n",
+      "max_features: 18, num_estimators: 10, Accuracy: 0.719 (+/- 0.044)\n",
+      "max_features: 18, num_estimators: 30, Accuracy: 0.740 (+/- 0.047)\n",
+      "max_features: 18, num_estimators: 50, Accuracy: 0.741 (+/- 0.061)\n",
+      "max_features: 18, num_estimators: 70, Accuracy: 0.740 (+/- 0.037)\n",
+      "max_features: 18, num_estimators: 90, Accuracy: 0.747 (+/- 0.040)\n",
+      "max_features: 18, num_estimators: 110, Accuracy: 0.748 (+/- 0.042)\n",
+      "max_features: 18, num_estimators: 130, Accuracy: 0.748 (+/- 0.042)\n",
+      "max_features: 18, num_estimators: 150, Accuracy: 0.751 (+/- 0.035)\n",
+      "max_features: 18, num_estimators: 170, Accuracy: 0.745 (+/- 0.039)\n",
+      "max_features: 18, num_estimators: 190, Accuracy: 0.745 (+/- 0.037)\n",
+      "max_features: 19, num_estimators: 10, Accuracy: 0.727 (+/- 0.030)\n",
+      "max_features: 19, num_estimators: 30, Accuracy: 0.740 (+/- 0.057)\n",
+      "max_features: 19, num_estimators: 50, Accuracy: 0.747 (+/- 0.063)\n",
+      "max_features: 19, num_estimators: 70, Accuracy: 0.748 (+/- 0.052)\n",
+      "max_features: 19, num_estimators: 90, Accuracy: 0.753 (+/- 0.047)\n",
+      "max_features: 19, num_estimators: 110, Accuracy: 0.755 (+/- 0.054)\n",
+      "max_features: 19, num_estimators: 130, Accuracy: 0.752 (+/- 0.052)\n",
+      "max_features: 19, num_estimators: 150, Accuracy: 0.752 (+/- 0.051)\n",
+      "max_features: 19, num_estimators: 170, Accuracy: 0.749 (+/- 0.048)\n",
+      "max_features: 19, num_estimators: 190, Accuracy: 0.748 (+/- 0.042)\n",
+      "max_features: 20, num_estimators: 10, Accuracy: 0.731 (+/- 0.027)\n",
+      "max_features: 20, num_estimators: 30, Accuracy: 0.745 (+/- 0.051)\n",
+      "max_features: 20, num_estimators: 50, Accuracy: 0.743 (+/- 0.055)\n",
+      "max_features: 20, num_estimators: 70, Accuracy: 0.743 (+/- 0.037)\n",
+      "max_features: 20, num_estimators: 90, Accuracy: 0.748 (+/- 0.045)\n",
+      "max_features: 20, num_estimators: 110, Accuracy: 0.746 (+/- 0.053)\n",
+      "max_features: 20, num_estimators: 130, Accuracy: 0.748 (+/- 0.050)\n",
+      "max_features: 20, num_estimators: 150, Accuracy: 0.746 (+/- 0.053)\n",
+      "max_features: 20, num_estimators: 170, Accuracy: 0.744 (+/- 0.049)\n",
+      "max_features: 20, num_estimators: 190, Accuracy: 0.744 (+/- 0.042)\n",
+      "max_features: 21, num_estimators: 10, Accuracy: 0.729 (+/- 0.035)\n",
+      "max_features: 21, num_estimators: 30, Accuracy: 0.748 (+/- 0.036)\n",
+      "max_features: 21, num_estimators: 50, Accuracy: 0.742 (+/- 0.043)\n",
+      "max_features: 21, num_estimators: 70, Accuracy: 0.740 (+/- 0.043)\n",
+      "max_features: 21, num_estimators: 90, Accuracy: 0.747 (+/- 0.035)\n",
+      "max_features: 21, num_estimators: 110, Accuracy: 0.746 (+/- 0.036)\n",
+      "max_features: 21, num_estimators: 130, Accuracy: 0.747 (+/- 0.034)\n",
+      "max_features: 21, num_estimators: 150, Accuracy: 0.741 (+/- 0.034)\n",
+      "max_features: 21, num_estimators: 170, Accuracy: 0.744 (+/- 0.039)\n",
+      "max_features: 21, num_estimators: 190, Accuracy: 0.747 (+/- 0.041)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Import libraries \n",
+    "from sklearn.model_selection import cross_val_score\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "# Initializing a DataFrame to save each model results\n",
+    "results = pd.DataFrame()\n",
+    "\n",
+    "# Loop to use different parameters in the model\n",
+    "for f in np.arange(1,22,1):\n",
+    "    for e in np.arange(10,200,20):\n",
+    "        # Create Random Forest model\n",
+    "        clf = RandomForestClassifier(max_features = f,\n",
+    "                                    random_state = 0,\n",
+    "                                    n_estimators = e)\n",
+    "        \n",
+    "        # Fit and train the model using the training data\n",
+    "        clf.fit(X_train, y_train.values.ravel())\n",
+    "        \n",
+    "        # Scoring the models results\n",
+    "        #cScore = clf2.score(df_test_att, df_test_label)\n",
+    "        \n",
+    "        # Score the model based on 'cv' folds\n",
+    "        clfScores = cross_val_score(clf, X_train, y_train.values.ravel(), cv = 5)\n",
+    "        \n",
+    "        # Print average scores and +/- two standard deviations away (covering 95% of scores)\n",
+    "        print(\"max_features: %i, num_estimators: %i, Accuracy: %0.3f (+/- %0.3f)\" % (f, e, clfScores.mean(), clfScores.std() * 2))\n",
+    "        \n",
+    "        # New row for results dataframe containing model hyperparameters and results\n",
+    "        new_row = {'max_features': f,\n",
+    "                   'num_estimators': e,\n",
+    "                   'accuracy': clfScores.mean()}\n",
+    "        results = results.append(new_row, ignore_index = True)"
+   ]
   }
  ],
  "metadata": {
