--- a/model/new_dataframe.ipynb
+++ b/model/new_dataframe.ipynb
@@ -9087,21 +9087,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Building a multilayer neural network using Keras\n",
     "model = Sequential()\n",
-    "model.add(Dense(132, input_dim = dims, activation = 'relu')) # Why input_dim on this line only?\n",
-    "model.add(Dense(66, activation = 'relu'))\n",
+    "model.add(Dense(132, input_dim = dims, activation = 'relu')) \n",
     "model.add(Dropout(.20))\n",
     "model.add(Dense(66, activation = 'softmax'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9110,7 +9109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9120,7 +9119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -9129,114 +9128,114 @@
      "text": [
       "Train on 2888 samples\n",
       "Epoch 1/50\n",
-      "2888/2888 [==============================] - 0s 153us/sample - loss: 0.9156 - accuracy: 0.5156\n",
+      "2888/2888 [==============================] - 0s 127us/sample - loss: 0.9227 - accuracy: 0.5658\n",
       "Epoch 2/50\n",
-      "2888/2888 [==============================] - 0s 85us/sample - loss: 0.8315 - accuracy: 0.5599\n",
+      "2888/2888 [==============================] - 0s 44us/sample - loss: 0.7639 - accuracy: 0.5893\n",
       "Epoch 3/50\n",
-      "2888/2888 [==============================] - 0s 44us/sample - loss: 0.7557 - accuracy: 0.5575\n",
+      "2888/2888 [==============================] - 0s 42us/sample - loss: 0.7950 - accuracy: 0.5859\n",
       "Epoch 4/50\n",
-      "2888/2888 [==============================] - 0s 39us/sample - loss: 0.6953 - accuracy: 0.5911\n",
+      "2888/2888 [==============================] - 0s 41us/sample - loss: 0.7150 - accuracy: 0.6101\n",
       "Epoch 5/50\n",
-      "2888/2888 [==============================] - 0s 40us/sample - loss: 0.6987 - accuracy: 0.5741\n",
+      "2888/2888 [==============================] - 0s 45us/sample - loss: 0.7021 - accuracy: 0.6042\n",
       "Epoch 6/50\n",
-      "2888/2888 [==============================] - 0s 51us/sample - loss: 0.6938 - accuracy: 0.5454\n",
+      "2888/2888 [==============================] - 0s 43us/sample - loss: 0.6827 - accuracy: 0.6253\n",
       "Epoch 7/50\n",
-      "2888/2888 [==============================] - 0s 66us/sample - loss: 0.7280 - accuracy: 0.5481\n",
+      "2888/2888 [==============================] - 0s 42us/sample - loss: 0.6609 - accuracy: 0.6295\n",
       "Epoch 8/50\n",
-      "2888/2888 [==============================] - 0s 62us/sample - loss: 0.6952 - accuracy: 0.5492\n",
+      "2888/2888 [==============================] - 0s 82us/sample - loss: 0.6737 - accuracy: 0.6195\n",
       "Epoch 9/50\n",
-      "2888/2888 [==============================] - 0s 79us/sample - loss: 0.6940 - accuracy: 0.5388\n",
+      "2888/2888 [==============================] - 0s 56us/sample - loss: 0.6528 - accuracy: 0.6343\n",
       "Epoch 10/50\n",
-      "2888/2888 [==============================] - 0s 72us/sample - loss: 0.6944 - accuracy: 0.5409\n",
+      "2888/2888 [==============================] - 0s 60us/sample - loss: 0.6352 - accuracy: 0.6479\n",
       "Epoch 11/50\n",
-      "2888/2888 [==============================] - 0s 55us/sample - loss: 0.6943 - accuracy: 0.5145\n",
+      "2888/2888 [==============================] - 0s 44us/sample - loss: 0.6250 - accuracy: 0.6444\n",
       "Epoch 12/50\n",
-      "2888/2888 [==============================] - 0s 50us/sample - loss: 0.6900 - accuracy: 0.5561\n",
+      "2888/2888 [==============================] - 0s 56us/sample - loss: 0.6297 - accuracy: 0.6278\n",
       "Epoch 13/50\n",
-      "2888/2888 [==============================] - 0s 56us/sample - loss: 0.6934 - accuracy: 0.5395\n",
+      "2888/2888 [==============================] - 0s 63us/sample - loss: 0.6250 - accuracy: 0.6319\n",
       "Epoch 14/50\n",
-      "2888/2888 [==============================] - 0s 52us/sample - loss: 0.6883 - accuracy: 0.5561\n",
+      "2888/2888 [==============================] - 0s 47us/sample - loss: 0.6216 - accuracy: 0.6323\n",
       "Epoch 15/50\n",
-      "2888/2888 [==============================] - 0s 59us/sample - loss: 0.6928 - accuracy: 0.5374\n",
+      "2888/2888 [==============================] - 0s 33us/sample - loss: 0.6137 - accuracy: 0.6382\n",
       "Epoch 16/50\n",
-      "2888/2888 [==============================] - 0s 60us/sample - loss: 0.6882 - accuracy: 0.5561\n",
+      "2888/2888 [==============================] - 0s 33us/sample - loss: 0.6176 - accuracy: 0.6177\n",
       "Epoch 17/50\n",
-      "2888/2888 [==============================] - 0s 58us/sample - loss: 0.6918 - accuracy: 0.5485\n",
+      "2888/2888 [==============================] - 0s 38us/sample - loss: 0.6060 - accuracy: 0.6468\n",
       "Epoch 18/50\n",
-      "2888/2888 [==============================] - 0s 44us/sample - loss: 0.6934 - accuracy: 0.5388\n",
+      "2888/2888 [==============================] - 0s 45us/sample - loss: 0.5990 - accuracy: 0.6378\n",
       "Epoch 19/50\n",
-      "2888/2888 [==============================] - 0s 52us/sample - loss: 0.6906 - accuracy: 0.5561\n",
+      "2888/2888 [==============================] - 0s 66us/sample - loss: 0.6003 - accuracy: 0.6323\n",
       "Epoch 20/50\n",
-      "2888/2888 [==============================] - 0s 35us/sample - loss: 0.6884 - accuracy: 0.5561\n",
+      "2888/2888 [==============================] - 0s 56us/sample - loss: 0.6063 - accuracy: 0.6191\n",
       "Epoch 21/50\n",
-      "2888/2888 [==============================] - 0s 36us/sample - loss: 0.6898 - accuracy: 0.5492\n",
+      "2888/2888 [==============================] - 0s 50us/sample - loss: 0.6109 - accuracy: 0.6499\n",
       "Epoch 22/50\n",
-      "2888/2888 [==============================] - 0s 37us/sample - loss: 0.6887 - accuracy: 0.5485\n",
+      "2888/2888 [==============================] - 0s 41us/sample - loss: 0.5984 - accuracy: 0.6274\n",
       "Epoch 23/50\n",
-      "2888/2888 [==============================] - 0s 39us/sample - loss: 0.6945 - accuracy: 0.5353\n",
+      "2888/2888 [==============================] - 0s 41us/sample - loss: 0.5951 - accuracy: 0.6409\n",
       "Epoch 24/50\n",
-      "2888/2888 [==============================] - 0s 41us/sample - loss: 0.6915 - accuracy: 0.5305\n",
+      "2888/2888 [==============================] - 0s 35us/sample - loss: 0.5888 - accuracy: 0.6416\n",
       "Epoch 25/50\n",
-      "2888/2888 [==============================] - 0s 39us/sample - loss: 0.6906 - accuracy: 0.5395\n",
+      "2888/2888 [==============================] - 0s 36us/sample - loss: 0.5805 - accuracy: 0.6375\n",
       "Epoch 26/50\n",
-      "2888/2888 [==============================] - 0s 38us/sample - loss: 0.6872 - accuracy: 0.5492\n",
+      "2888/2888 [==============================] - 0s 33us/sample - loss: 0.5821 - accuracy: 0.6434\n",
       "Epoch 27/50\n",
-      "2888/2888 [==============================] - 0s 39us/sample - loss: 0.6980 - accuracy: 0.5284\n",
+      "2888/2888 [==============================] - 0s 33us/sample - loss: 0.5737 - accuracy: 0.6468\n",
       "Epoch 28/50\n",
-      "2888/2888 [==============================] - 0s 42us/sample - loss: 0.6888 - accuracy: 0.5561\n",
+      "2888/2888 [==============================] - 0s 35us/sample - loss: 0.5811 - accuracy: 0.6489\n",
       "Epoch 29/50\n",
-      "2888/2888 [==============================] - 0s 40us/sample - loss: 0.6933 - accuracy: 0.5249\n",
+      "2888/2888 [==============================] - 0s 39us/sample - loss: 0.5849 - accuracy: 0.6479\n",
       "Epoch 30/50\n",
-      "2888/2888 [==============================] - 0s 38us/sample - loss: 0.6900 - accuracy: 0.5471\n",
+      "2888/2888 [==============================] - 0s 53us/sample - loss: 0.5665 - accuracy: 0.6392\n",
       "Epoch 31/50\n",
-      "2888/2888 [==============================] - 0s 38us/sample - loss: 0.6891 - accuracy: 0.5561\n",
+      "2888/2888 [==============================] - 0s 52us/sample - loss: 0.5674 - accuracy: 0.6558\n",
       "Epoch 32/50\n",
-      "2888/2888 [==============================] - 0s 42us/sample - loss: 0.6891 - accuracy: 0.5512\n",
+      "2888/2888 [==============================] - 0s 51us/sample - loss: 0.5650 - accuracy: 0.6350\n",
       "Epoch 33/50\n",
-      "2888/2888 [==============================] - 0s 38us/sample - loss: 0.6907 - accuracy: 0.5478\n",
+      "2888/2888 [==============================] - 0s 42us/sample - loss: 0.5464 - accuracy: 0.6506\n",
       "Epoch 34/50\n",
-      "2888/2888 [==============================] - 0s 35us/sample - loss: 0.6911 - accuracy: 0.5360\n",
+      "2888/2888 [==============================] - 0s 40us/sample - loss: 0.5494 - accuracy: 0.6454\n",
       "Epoch 35/50\n",
-      "2888/2888 [==============================] - 0s 38us/sample - loss: 0.6923 - accuracy: 0.5332\n",
+      "2888/2888 [==============================] - 0s 35us/sample - loss: 0.5621 - accuracy: 0.6527\n",
       "Epoch 36/50\n",
-      "2888/2888 [==============================] - 0s 46us/sample - loss: 0.6941 - accuracy: 0.5284\n",
+      "2888/2888 [==============================] - 0s 40us/sample - loss: 0.5548 - accuracy: 0.6413\n",
       "Epoch 37/50\n",
-      "2888/2888 [==============================] - 0s 35us/sample - loss: 0.6899 - accuracy: 0.5457\n",
+      "2888/2888 [==============================] - 0s 42us/sample - loss: 0.5548 - accuracy: 0.6326\n",
       "Epoch 38/50\n",
-      "2888/2888 [==============================] - 0s 35us/sample - loss: 0.6938 - accuracy: 0.5319\n",
+      "2888/2888 [==============================] - 0s 38us/sample - loss: 0.5484 - accuracy: 0.6406\n",
       "Epoch 39/50\n",
-      "2888/2888 [==============================] - 0s 35us/sample - loss: 0.6908 - accuracy: 0.5561\n",
+      "2888/2888 [==============================] - 0s 36us/sample - loss: 0.5449 - accuracy: 0.6638\n",
       "Epoch 40/50\n",
-      "2888/2888 [==============================] - 0s 37us/sample - loss: 0.6881 - accuracy: 0.5561\n",
+      "2888/2888 [==============================] - 0s 42us/sample - loss: 0.5342 - accuracy: 0.6575\n",
       "Epoch 41/50\n",
-      "2888/2888 [==============================] - 0s 40us/sample - loss: 0.6904 - accuracy: 0.5526\n",
+      "2888/2888 [==============================] - 0s 45us/sample - loss: 0.5355 - accuracy: 0.6620\n",
       "Epoch 42/50\n",
-      "2888/2888 [==============================] - 0s 38us/sample - loss: 0.6902 - accuracy: 0.5561\n",
+      "2888/2888 [==============================] - 0s 57us/sample - loss: 0.5461 - accuracy: 0.6676\n",
       "Epoch 43/50\n",
-      "2888/2888 [==============================] - 0s 35us/sample - loss: 0.6881 - accuracy: 0.5561\n",
+      "2888/2888 [==============================] - 0s 45us/sample - loss: 0.5375 - accuracy: 0.6472\n",
       "Epoch 44/50\n",
-      "2888/2888 [==============================] - 0s 35us/sample - loss: 0.6887 - accuracy: 0.5332\n",
+      "2888/2888 [==============================] - 0s 47us/sample - loss: 0.5473 - accuracy: 0.6406\n",
       "Epoch 45/50\n",
-      "2888/2888 [==============================] - 0s 37us/sample - loss: 0.6887 - accuracy: 0.5485\n",
+      "2888/2888 [==============================] - 0s 39us/sample - loss: 0.5383 - accuracy: 0.6496\n",
       "Epoch 46/50\n",
-      "2888/2888 [==============================] - 0s 45us/sample - loss: 0.6912 - accuracy: 0.5346\n",
+      "2888/2888 [==============================] - 0s 36us/sample - loss: 0.5437 - accuracy: 0.6524\n",
       "Epoch 47/50\n",
-      "2888/2888 [==============================] - 0s 65us/sample - loss: 0.6958 - accuracy: 0.5256\n",
+      "2888/2888 [==============================] - 0s 37us/sample - loss: 0.5413 - accuracy: 0.6454\n",
       "Epoch 48/50\n",
-      "2888/2888 [==============================] - 0s 52us/sample - loss: 0.6883 - accuracy: 0.5540\n",
+      "2888/2888 [==============================] - 0s 35us/sample - loss: 0.5481 - accuracy: 0.6361\n",
       "Epoch 49/50\n",
-      "2888/2888 [==============================] - 0s 52us/sample - loss: 0.6911 - accuracy: 0.5388\n",
+      "2888/2888 [==============================] - 0s 38us/sample - loss: 0.5297 - accuracy: 0.6402\n",
       "Epoch 50/50\n",
-      "2888/2888 [==============================] - 0s 47us/sample - loss: 0.6938 - accuracy: 0.5429\n"
+      "2888/2888 [==============================] - 0s 43us/sample - loss: 0.5396 - accuracy: 0.6354\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7fce5b2612d0>"
+       "<tensorflow.python.keras.callbacks.History at 0x7fce5d09ef50>"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
